--- a/Semana1/Sesion1.ipynb
+++ b/Semana1/Sesion1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNze3RnGNcavSlFJpAGXqk",
+      "authorship_tag": "ABX9TyNQ0b42DPbKDdhnLTpgT5TQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -176,12 +176,12 @@
       "source": [
         "# Como automatizo las tareas\n",
         "## Funciones ???\n",
-        "## Bucles"
+        "## Bucles    ??? Automatizar"
       ],
       "metadata": {
         "id": "uQYHP6_t82Kd"
       },
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
       "metadata": {
         "id": "cO9flQyp9U9u"
       },
-      "execution_count": 38,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -209,9 +209,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SHxncjoW94bo",
-        "outputId": "a8c847da-64af-451e-a349-a07dcc2ba4c5"
+        "outputId": "af476cc2-69ed-4b13-94b2-62a421322fb2"
       },
-      "execution_count": 41,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,9 +224,206 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# i es el valor que esta cambiando\n",
+        "# el computador cambia el numero\n",
+        "for i in range(6): # Los ciclos (estructuras de datos arrancan en 0)\n",
+        "  # El ultimo valor en el rango del ciclo no se toma\n",
+        "  print(i)\n",
+        "  # Ejecuto el proceso las veces que necesite\n",
+        "  Proceso1(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vH5xUVkm-JNs",
+        "outputId": "7d82b215-a4f2-48c6-f826-477743818c28"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "2\n",
+            "3\n",
+            "3\n",
+            "4\n",
+            "4\n",
+            "5\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# leonardo style\n",
+        "for i in range(6): # Los ciclos (estructuras de datos arrancan en 0)\n",
+        "  # El ultimo valor en el rango del ciclo no se toma\n",
+        "  print(i+1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aY_byKYsAtEz",
+        "outputId": "08caff04-72b6-4b89-ac41-94486f4b319c"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Quiero arrancar en 1, pero ojo!!! hacerlo 6 veces\n",
+        "for i in range(1,7): # Los ciclos (estructuras de datos arrancan en 0)\n",
+        "  # El ultimo valor en el rango del ciclo no se toma\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I_xe7jiL_oxE",
+        "outputId": "52d8605d-c1d7-44eb-842c-6ef759051392"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Definir la Tarea1\n",
+        "#Hacer un bucle 20 veces y tomar el valor del iterador, multiplicar 5 + 1\n",
+        "# LLamar a proceso 1 en cada iteracion"
+      ],
+      "metadata": {
+        "id": "NQ-vbcxRAbXp"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def Proceso2(x):\n",
+        "  return 5*x+1"
+      ],
+      "metadata": {
+        "id": "lUsIh0GAElVA"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Proceso2(10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A30UHanFEwMO",
+        "outputId": "9dc680df-147d-4eeb-83f8-135a03412a31"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "51"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(20):\n",
+        "  valor = Proceso2(i)\n",
+        "  Proceso1(valor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z3UMo9cuD3EX",
+        "outputId": "37b2512e-32fb-4cdf-8843-98d689bc7d6b"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "6\n",
+            "11\n",
+            "16\n",
+            "21\n",
+            "26\n",
+            "31\n",
+            "36\n",
+            "41\n",
+            "46\n",
+            "51\n",
+            "56\n",
+            "61\n",
+            "66\n",
+            "71\n",
+            "76\n",
+            "81\n",
+            "86\n",
+            "91\n",
+            "96\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "vH5xUVkm-JNs"
+        "id": "fvR91pmyFEZa"
       },
       "execution_count": null,
       "outputs": []
