--- a/Semana1/Sesion2.ipynb
+++ b/Semana1/Sesion2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNapGfKFZI4XeH+4zmtpCvM",
+      "authorship_tag": "ABX9TyNvqzShZRgSEfUT2JoYzehU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -464,9 +464,204 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Quiero filtrar la informacion para valores mayores a 2 y menores que 7\n",
+        "mayores2_7 = [ x for x in Lista1 if 7 > x > 2 ]\n",
+        "mayores2_7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3bMPIQKR3hB3",
+        "outputId": "0ddb0519-59dc-4f0a-a342-43236f6bd286"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[np.float64(3.0), np.float64(6.5), np.float64(4.0)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lista1 > 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FgdS7TEh5qdF",
+        "outputId": "2e83357f-e7a4-4d7e-8254-c8858502c666"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False,  True,  True,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lista1 < 7"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j1LI6s9A5-3q",
+        "outputId": "f1d21af4-f272-41fe-e852-8ac8e05741c1"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True,  True, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(Lista1 > 2) & (Lista1 < 7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OQCXBVWi6mxH",
+        "outputId": "475a9abd-a413-4f7c-c57b-b1b995ba78f5"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False,  True,  True,  True, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 98
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lista1[ (Lista1 > 2) & (Lista1 < 7) ]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WFDD4t_-6A8H",
+        "outputId": "71a24a6b-a80b-440d-aba6-0663908ce90b"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3. , 6.5, 4. ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Queremos valores mayores que 9 y menores que 7"
+      ],
+      "metadata": {
+        "id": "_mGnJM-R6VAs"
+      },
+      "execution_count": 99,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lista1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X6kfWVNt7Em5",
+        "outputId": "3d05bba6-2ce6-4bbd-e5a4-b0e9ebdde254"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.  , 3.  , 6.5 , 4.  , 9.81])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(Lista1 > 9) & (Lista1 < 7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W9X6CnX17GsD",
+        "outputId": "9955fae5-e1cc-4c62-a4f9-55f43fcaf312"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "3bMPIQKR3hB3"
+        "id": "b_m7WFwO7eC1"
       },
       "execution_count": null,
       "outputs": []
