--- a/Semana1/Sesion2.ipynb
+++ b/Semana1/Sesion2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvqzShZRgSEfUT2JoYzehU",
+      "authorship_tag": "ABX9TyOEI5+viWAnMlIhAth0u2Lu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -659,9 +659,542 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Y si queremos O\n",
+        "(Lista1 > 9) | (Lista1 < 7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "09hFPR108BHz",
+        "outputId": "b1c32afb-9cb7-434e-a721-8da16ab568fa"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Lista1[ (Lista1 > 9) | (Lista1 < 7) ]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b_m7WFwO7eC1",
+        "outputId": "7e5151f0-9765-45df-8470-78dba4e7f809"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.  , 3.  , 6.5 , 4.  , 9.81])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Una ultima forma de filtrar\n",
+        "np.where(Lista1 > 6)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6tk6od-k8Gdc",
+        "outputId": "78aa7c46-d97d-4602-f8df-ede8543c787f"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([2, 4]),)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Una ultima forma de filtrar\n",
+        "def EscogerEdad(x):\n",
+        "  return x > 7"
+      ],
+      "metadata": {
+        "id": "U3lve8F_945t"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ListaMenores = list( filter(EscogerEdad,Lista1) )\n",
+        "ListaMenores"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zwPQhxse-k3x",
+        "outputId": "0e91df5f-e9b7-4acf-94fb-52940be28b28"
+      },
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[np.float64(9.81)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 108
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Calles y Carreras -> Matrices -> Hoja de calculo\n",
+        "## Matriz sea una lista de listas"
+      ],
+      "metadata": {
+        "id": "DoyKwpFC-3H2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz = [[4,5],[3,2],[5,9]]\n",
+        "type(Matriz)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1C1ZBaAs-uZT",
+        "outputId": "7cfbbc6c-af34-463c-ff62-f034c24d63e1"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vq41EaoCDFMu",
+        "outputId": "79999f4f-c6bc-4b39-9276-249fb05dad94"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[4, 5], [3, 2], [5, 9]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 131
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz[0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AZxQLbwc_PsP",
+        "outputId": "a8130709-dc59-40bf-a5c8-7a850c60c25a"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz[1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X3kgGqGm_ZTj",
+        "outputId": "9c08be1a-d875-4448-e935-d7a10983cfa6"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 2]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "b_m7WFwO7eC1"
+        "id": "at2sJqEnAL5K"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oFo_tpfj_nbu",
+        "outputId": "2d010604-ef16-4819-dc0d-ad401950e35d"
+      },
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[4, 5], [3, 2], [5, 9]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Como iteramos este nuevo objeto (\"Accesibilidad\")\n",
+        "for i in range(3):\n",
+        "\n",
+        "  if i == 0:\n",
+        "    print('Calle ',Matriz[i])\n",
+        "    for j in range(2):\n",
+        "      print(Matriz[i][j])\n",
+        "  elif i == 1:\n",
+        "    print('Calle ',Matriz[i])\n",
+        "    for j in range(2):\n",
+        "      print(Matriz[i][j])\n",
+        "  elif i == 2:\n",
+        "    print('Calle ',Matriz[i])\n",
+        "    for j in range(2):\n",
+        "      print(Matriz[i][j])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IY504_XI_vpm",
+        "outputId": "e72c94b2-f095-4284-d025-39309dedc888"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Calle  [4, 5]\n",
+            "4\n",
+            "5\n",
+            "Calle  [3, 2]\n",
+            "3\n",
+            "2\n",
+            "Calle  [5, 9]\n",
+            "5\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Matriz = np.array(Matriz)\n",
+        "Matriz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DrKCvILjDn9r",
+        "outputId": "72af1401-d95c-44f4-f11c-67e1e62a6840"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[4, 5],\n",
+              "       [3, 2],\n",
+              "       [5, 9]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Guardamos la informacion\n",
+        "np.savetxt('Datos.csv',Matriz,delimiter=',',newline='\\n')"
+      ],
+      "metadata": {
+        "id": "bKQ9Rk4RA2iC"
+      },
+      "execution_count": 142,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Necesitamos habilitar colab\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive', force_remount=True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h5eyrxEJDu6J",
+        "outputId": "4c619ee3-f336-472d-fef9-e4e380e8a464"
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "!ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SugjfqVOEbT6",
+        "outputId": "c51a91b1-ec8f-40ca-a5fe-35dca71fa1b9"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Datos  Datos.csv  new.csv  Semana1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir('/content/drive/MyDrive/ColabNotebooks/Cursos/CursoCienciaDatos')"
+      ],
+      "metadata": {
+        "id": "OWdGw0gqElWa"
+      },
+      "execution_count": 152,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KdB0a4Z_EziX",
+        "outputId": "3492addc-3d40-4e0a-ba18-080150ac33e3"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Datos  new.csv\tSemana1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Guardamos la informacion\n",
+        "np.savetxt('Datos.csv',Matriz,delimiter=',',newline='\\n')"
+      ],
+      "metadata": {
+        "id": "hyAnadbNE0Wz"
+      },
+      "execution_count": 154,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "files.download('Datos.csv')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "Fcxek5tIFP39",
+        "outputId": "b0f7b9d0-7635-481a-db82-38d9c7792979"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_a2b5d898-d849-4508-8086-b012544d7f1e\", \"Datos.csv\", 150)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7RrQbkf8F4tN"
       },
       "execution_count": null,
       "outputs": []
