--- a/Semana2/ManejoDatos.ipynb
+++ b/Semana2/ManejoDatos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO2YmZlYwqKk3mIO+yd186w",
+      "authorship_tag": "ABX9TyMYu8yh3b1LLlsSUaurovKW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -569,27 +569,121 @@
         "    folder = os.path.join(carpeta_principal, f'Conjunto_{i}')\n",
         "    print(folder)\n",
         "\n",
+        "    # Te preguntas si existe\n",
         "    if not os.path.exists(folder):\n",
         "      print(f'La carpeta {folder} no existe')\n",
-        "      continue"
+        "      continue\n",
+        "\n",
+        "    # Que archivos quieres guardar\n",
+        "    for archivo in archivos:\n",
+        "      archivo_path = os.path.join(folder, archivo)\n",
+        "      print(archivo_path)\n",
+        "\n",
+        "      # Escribimos en el zip\n",
+        "      if os.path.exists(archivo_path):\n",
+        "        z.write(archivo_path, os.path.relpath(archivo_path, carpeta_principal))\n",
+        "        print(f'Agregando {archivo_path} al zip')\n",
+        "\n",
+        "files.download(zip_path)\n",
+        "print(f'Descargando {zip_path}')"
       ],
       "metadata": {
         "id": "6U5FvjktnbmC",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 248
         },
-        "outputId": "667fa687-8f18-427f-ec67-f9c079b41ed5"
+        "outputId": "ceb42af5-a1f7-4be4-f948-f87e4fe262ca"
       },
-      "execution_count": 51,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Datos/Conjunto_3\n",
+            "Datos/Conjunto_3/archivo.txt\n",
+            "Agregando Datos/Conjunto_3/archivo.txt al zip\n",
             "Datos/Conjunto_7\n",
+            "Datos/Conjunto_7/archivo.txt\n",
+            "Agregando Datos/Conjunto_7/archivo.txt al zip\n",
             "Datos/Conjunto_5\n",
-            "Datos/Conjunto_9\n"
+            "Datos/Conjunto_5/archivo.txt\n",
+            "Agregando Datos/Conjunto_5/archivo.txt al zip\n",
+            "Datos/Conjunto_9\n",
+            "Datos/Conjunto_9/archivo.txt\n",
+            "Agregando Datos/Conjunto_9/archivo.txt al zip\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_4a071e41-f415-44a0-a701-e9c1f32c1152\", \"subconjunto_archivos.zip\", 594)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Descargando subconjunto_archivos.zip\n"
           ]
         }
       ]
