--- a/Semana2/Sesion4.ipynb
+++ b/Semana2/Sesion4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpWSlG2J0Ukn6jXhbauN0r",
+      "authorship_tag": "ABX9TyPI55oRu8V+Hq8c+Va7Xd98",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OMDhXhVjDRPm",
-        "outputId": "7687510b-2d4e-49a7-8d5f-4071b5c3c129"
+        "outputId": "c56a4323-6555-4132-fcbf-41e2eba84cc5"
       },
       "outputs": [
         {
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c7NnieeSDZVS",
-        "outputId": "ed6bb468-3d80-41c0-8dd8-5ce58a438f9a"
+        "outputId": "e8c53140-e2e7-4721-a9fc-76f1a05728a4"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ojchnaLW0QnM",
-        "outputId": "48502fd7-353b-43de-e72b-4fad887131ca"
+        "outputId": "1480e44f-0595-4d0b-f77c-d6abd19e003b"
       },
-      "execution_count": 16,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -121,7 +121,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 3
         }
       ]
     },
@@ -136,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wdQ-qnXY1EHV",
-        "outputId": "5fd413d2-db74-49f4-db9d-35734e1cf942"
+        "outputId": "40d43b88-cd9e-4e31-a4ab-ac2956903be2"
       },
-      "execution_count": 49,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +157,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 4
         }
       ]
     },
@@ -170,7 +170,7 @@
       "metadata": {
         "id": "WGEC7GXj1a1k"
       },
-      "execution_count": 50,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -185,9 +185,9 @@
           "height": 687
         },
         "id": "FF7bJDTD15lg",
-        "outputId": "4bc5aea8-ab90-4d12-86c5-8bb2ea4773bc"
+        "outputId": "f0dfade5-16b3-4dbc-f081-cf042e16d45a"
       },
-      "execution_count": 54,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +288,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-921aa8f9-98d4-40f9-9983-e80aeabfcc03\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dc30b6e2-11b5-4cb3-be87-ece99effd388\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -602,7 +602,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-921aa8f9-98d4-40f9-9983-e80aeabfcc03')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dc30b6e2-11b5-4cb3-be87-ece99effd388')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -654,12 +654,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-921aa8f9-98d4-40f9-9983-e80aeabfcc03 button.colab-df-convert');\n",
+              "        document.querySelector('#df-dc30b6e2-11b5-4cb3-be87-ece99effd388 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-921aa8f9-98d4-40f9-9983-e80aeabfcc03');\n",
+              "        const element = document.querySelector('#df-dc30b6e2-11b5-4cb3-be87-ece99effd388');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -679,8 +679,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-8d830519-c033-4a40-8356-dbbe4bed1b8a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8d830519-c033-4a40-8356-dbbe4bed1b8a')\"\n",
+              "    <div id=\"df-c1f71ac8-dfec-4620-91ff-79b4ce4a5d63\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c1f71ac8-dfec-4620-91ff-79b4ce4a5d63')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -799,14 +799,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-8d830519-c033-4a40-8356-dbbe4bed1b8a button');\n",
+              "            document.querySelector('#df-c1f71ac8-dfec-4620-91ff-79b4ce4a5d63 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_654a0c2f-96f3-4eef-b292-61a178a85456\">\n",
+              "  <div id=\"id_0dbd8ad8-85ed-45e7-8795-340417e82a76\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -850,7 +850,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_654a0c2f-96f3-4eef-b292-61a178a85456 button.colab-df-generate');\n",
+              "        document.querySelector('#id_0dbd8ad8-85ed-45e7-8795-340417e82a76 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -870,7 +870,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 6
         }
       ]
     },
@@ -884,9 +884,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jgFMnYkE2Trr",
-        "outputId": "e0a17032-3908-4485-e4f0-405c21022176"
+        "outputId": "04d362c7-0b0b-4d78-ff7f-fb75f6616b5b"
       },
-      "execution_count": 55,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +905,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 7
         }
       ]
     },
@@ -923,9 +923,9 @@
           "height": 424
         },
         "id": "azTgRHUG3i3L",
-        "outputId": "f2355cf5-9244-47ba-dae3-e28db484c87e"
+        "outputId": "d9b81000-67d1-40cf-e90c-78831f6f0106"
       },
-      "execution_count": 56,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-326af9bd-90d9-4505-a000-b63c6ec1461d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d679b14f-8a3e-4d6e-b9d7-2feabe5fc888\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1034,7 +1034,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-326af9bd-90d9-4505-a000-b63c6ec1461d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d679b14f-8a3e-4d6e-b9d7-2feabe5fc888')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1086,12 +1086,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-326af9bd-90d9-4505-a000-b63c6ec1461d button.colab-df-convert');\n",
+              "        document.querySelector('#df-d679b14f-8a3e-4d6e-b9d7-2feabe5fc888 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-326af9bd-90d9-4505-a000-b63c6ec1461d');\n",
+              "        const element = document.querySelector('#df-d679b14f-8a3e-4d6e-b9d7-2feabe5fc888');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1111,8 +1111,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a5b72955-9f26-4bb0-9867-9fcede15aabc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a5b72955-9f26-4bb0-9867-9fcede15aabc')\"\n",
+              "    <div id=\"df-0ea59c1a-4f38-4427-a5c0-becd72294bf4\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0ea59c1a-4f38-4427-a5c0-becd72294bf4')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1231,14 +1231,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a5b72955-9f26-4bb0-9867-9fcede15aabc button');\n",
+              "            document.querySelector('#df-0ea59c1a-4f38-4427-a5c0-becd72294bf4 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_f20f4bb5-4722-4245-9e4a-d91e3282b7cd\">\n",
+              "  <div id=\"id_a9ddb6e3-be9f-4636-b668-605832e2ea60\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1282,7 +1282,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_f20f4bb5-4722-4245-9e4a-d91e3282b7cd button.colab-df-generate');\n",
+              "        document.querySelector('#id_a9ddb6e3-be9f-4636-b668-605832e2ea60 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1303,7 +1303,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 56
+          "execution_count": 8
         }
       ]
     },
@@ -1318,9 +1318,9 @@
           "height": 619
         },
         "id": "FzntM-3g3wqQ",
-        "outputId": "02fc59fa-edec-4e49-c180-93bf6bad12ad"
+        "outputId": "9d347272-8d2f-4e9b-94b6-15e7a290c033"
       },
-      "execution_count": 57,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1330,7 +1330,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -1362,9 +1362,9 @@
           "height": 1000
         },
         "id": "fI2ikuBh4qp2",
-        "outputId": "5b87c07e-9437-4401-ce3c-328f0d955424"
+        "outputId": "eab6fca5-a4a1-45c8-dedf-0f997571043e"
       },
-      "execution_count": 58,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1697,9 +1697,9 @@
           "height": 728
         },
         "id": "1aN-rPH36N1K",
-        "outputId": "70ad057d-d6da-4c49-f69c-d247c6fffe9f"
+        "outputId": "e2dfe963-5c43-4ee5-e6ab-500fb93f6fa1"
       },
-      "execution_count": 67,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -1831,9 +1831,89 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Pregunta 2: Queremos tener una carpeta para cada departamento para cada archivo y pintamos el histograma de la edad"
+      ],
       "metadata": {
         "id": "2z35tLUh7vw_"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "outdir = 'Salida'\n",
+        "for f in csv_files:\n",
+        "  print(f)\n",
+        "  df = pd.read_csv(f, sep=',', low_memory=True)\n",
+        "  if \"Edad\" in df.columns and \"Nombre departamento\" in df.columns:\n",
+        "    df['Edad'] = pd.to_numeric(df['Edad'])\n",
+        "    sub = df[['Edad','Nombre departamento']].dropna()\n",
+        "\n",
+        "    folder = os.path.basename(os.path.dirname(f))\n",
+        "    num = folder.split(\"_\")[-1]\n",
+        "   # print(folder,num)\n",
+        "    folder_salida = os.path.join(outdir,'folder_'+num)\n",
+        "    print(folder_salida)\n",
+        "\n",
+        "    # Creamos la carpeta\n",
+        "    os.makedirs(folder_salida, exist_ok=True)\n",
+        "\n",
+        "    if not sub.empty:\n",
+        "      # Hamos un for en los departamentos para crear las carpetas de cada archivo\n",
+        "      for depto, g in sub.groupby('Nombre departamento'):\n",
+        "        outpath = os.path.join(folder_salida,depto)\n",
+        "        os.makedirs(outpath, exist_ok=True)\n",
+        "        #print(outpath)\n",
+        "\n",
+        "        edades = g['Edad'].dropna().astype(float)\n",
+        "        plt.figure(figsize=(6,6))\n",
+        "        edades.plot.hist(alpha=0.5, label=depto)\n",
+        "        plt.xlabel('Edad')\n",
+        "        plt.legend()\n",
+        "        outpath = os.path.join(outpath,\"Edad.png\")\n",
+        "        plt.savefig(outpath, dpi=15)\n",
+        "        plt.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KebDS1sBEZwI",
+        "outputId": "d3bc2473-9008-4eaa-d37e-64cf5d7c358f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "BaseDatos/Proceso_Header_10/muestra.csv\n",
+            "Salida/folder_10\n",
+            "BaseDatos/Proceso_Header_9/muestra.csv\n",
+            "Salida/folder_9\n",
+            "BaseDatos/Proceso_Header_2/muestra.csv\n",
+            "Salida/folder_2\n",
+            "BaseDatos/Proceso_Header_1/muestra.csv\n",
+            "Salida/folder_1\n",
+            "BaseDatos/Proceso_Header_6/muestra.csv\n",
+            "Salida/folder_6\n",
+            "BaseDatos/Proceso_Header_7/muestra.csv\n",
+            "Salida/folder_7\n",
+            "BaseDatos/Proceso_Header_8/muestra.csv\n",
+            "Salida/folder_8\n",
+            "BaseDatos/Proceso_Header_5/muestra.csv\n",
+            "Salida/folder_5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2Kk5BlicEpuj"
       },
       "execution_count": null,
       "outputs": []
